# mcp-calculator

./: .dockerignore  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
test/: callTool.py
tools/: calculator.py
